tdf#132001 DOCX import: fix crash: redline in floating table

Copying redlines to frame text was failed in tables inside
frames. Skip these redlines temporarily.

Regression from commit e8bae67b3dbcc90ace8264b6b1aefaf0ce459aba
(tdf#125894: DOCX: import tracked changes in frames).

Change-Id: I4f3ca2e95fb2e7637f8cf8dca1088a7727bcf98d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91985
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 1350832be533ce6627607b1aaabd2b3565e6e7b3)